// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextLink /> should allow as override 1`] = `
<a
  as="[object Object]"
  class="base cursorPointer a anchor"
  rel="noopener noreferrer"
>
  <span
    class="base textAlign_left root_base sizes_4_base fontWeight_bold_base base root_base"
  >
    Test
  </span>
</a>
`;

exports[`<TextLink /> should match the snapshot 1`] = `
<a
  class="base cursorPointer a anchor"
  rel="noopener noreferrer"
>
  <span
    class="base textAlign_left root_base sizes_4_base fontWeight_bold_base base root_base"
  />
</a>
`;
